--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "hubot-help": "^0.1.1",
     "hubot-maps": "0.0.1",
     "hubot-pugme": "^0.1.0",
-    "orchestrate-brain": "0.0.2",
+    "orchestrate-brain": "0.0.5",
+	"hubot-heroku-keepalive": "0.0.4",
+	"hubot-slack": "3.4.2",
     "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.2",
     "hubot-youtube": "^0.1.2",
-    "githubot": "^0.4.x",
-    "cron": "1.0.0",
-    "time": "0.8.2"
+    "githubot": "^0.4.x"
   },
   "engines": {
     "node": "0.10.x"
