--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "description": "A bot who can't do anything",
   "dependencies": {
     "hubot": "~2.13.2",
-    "hubot-chatwork": "^0.1.0",
     "hubot-diagnostics": "0.0.1",
-    "hubot-google-images": "^0.1.3",
-    "hubot-google-translate": "^0.1.0",
     "hubot-help": "^0.1.1",
     "hubot-maps": "0.0.1",
     "hubot-pugme": "^0.1.0",
@@ -19,8 +16,7 @@
     "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.2",
-    "hubot-youtube": "^0.1.2",
-    "githubot": "^0.4.x"
+	"coffee-script": "1.10.0"
   },
   "engines": {
     "node": "0.10.x"
