--- a/package.json
+++ b/package.json
@@ -6,17 +6,11 @@
   "description": "A bot who can't do anything",
   "dependencies": {
     "hubot": "~2.13.2",
-    "hubot-diagnostics": "0.0.1",
-    "hubot-help": "^0.1.1",
-    "hubot-maps": "0.0.1",
-    "hubot-pugme": "^0.1.0",
     "orchestrate-brain": "0.0.5",
-	"hubot-heroku-keepalive": "0.0.4",
-	"hubot-slack": "3.4.2",
-    "hubot-rules": "^0.1.0",
+	  "hubot-slack": "3.4.2",
     "hubot-scripts": "^2.5.16",
-    "hubot-shipit": "^0.1.2",
-	"coffee-script": "1.10.0"
+    "hubot-relay": "0.1.0",
+    "coffee-script": "1.10.0"
   },
   "engines": {
     "node": "0.10.x"
